docs/samples/invalid/syntax_error_example.edl
// Expected error: unmatched ')' in declaration expression.
let x: int = (1 + 2;
print(x);
